--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 fastapi==0.115.7
 sqlalchemy==2.0.37
 pandas==2.2.3
-alembic==1.14.1
+# alembic==1.14.1
 python-dotenv==1.0.1
 langchain==0.3.15
 requests==2.32.3
